Fixed Adv. Pattern Providers not dropping when mined